--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+.bloop/
+.metals/
+.vscode/
+project/.bloop/
+project/metals.sbt
+public/
+
+.batect
+.bsp
+package-lock.json
+Gemfile.lock
